package com.korus.core.api

import com.korus.core.application.GetBalanceUseCase
import com.korus.core.application.GetTransactionsUseCase
import com.korus.core.application.RecordTransactionUseCase
import com.korus.core.domain.Transaction
import com.korus.core.domain.TransactionCategory
import com.korus.core.domain.TransactionType
import org.springframework.format.annotation.DateTimeFormat
import org.springframework.web.bind.annotation.*
import java.math.BigDecimal
import java.time.LocalDateTime
import java.util.UUID // <-- No te olvides de este import

@RestController
@RequestMapping("/api/transactions")
class TransactionController(
    private val recordUseCase: RecordTransactionUseCase,
    private val getUseCase: GetTransactionsUseCase,
    private val getBalanceUseCase: GetBalanceUseCase
) {

    @PostMapping
    fun create(
        @RequestHeader("X-User-Id") userId: UUID, // El dueño viene del Header
        @RequestBody request: TransactionRequest  // Los datos de la transacción del JSON
    ): Transaction {
        return recordUseCase.execute(
            title = request.title,
            amount = request.amount,
            type = request.type,
            category = request.category,
            walletId = request.walletId,
            userId = userId // Pasamos el userId seguro del header
        )
    }

    @GetMapping
    fun getAll(
        @RequestHeader("X-User-Id") userId: UUID,
        @RequestParam(required = false) type: TransactionType?,
        @RequestParam(required = false) category: TransactionCategory?,
        @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) startDate: LocalDateTime?,
        @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) endDate: LocalDateTime?
    ): List<Transaction> {
        return getUseCase.execute(userId, type, category, startDate, endDate)
    }

    @GetMapping("/balance")
    fun getBalance(
        @RequestHeader("X-User-Id") userId: UUID
    ): Map<String, BigDecimal> {
        return mapOf("balance" to getBalanceUseCase.execute(userId))
    }
}